设计密码框

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,7 +19,7 @@
         android:layout_height="65dp"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="81dp"
-        android:src="@drawable/recreationalsearies" />
+        android:background="@drawable/recreationalsearies" />
 
 
     <ImageButton
@@ -27,9 +27,8 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="5dp"
         android:layout_weight="10"
-        android:background="@color/r105"
         android:scaleType="fitEnd"
-        android:src="@drawable/mycoolman" />
+        android:background="@drawable/mycoolman" />
 
     <TextView
         android:layout_width="172dp"
@@ -46,8 +45,8 @@
         android:id="@+id/btscanqr"
         android:layout_width="110dp"
         android:layout_height="44dp"
-        android:layout_marginTop="296dp"
         android:layout_marginLeft="74dp"
+        android:layout_marginTop="296dp"
         android:background="@drawable/scanqr" />
 
     <TextView
