--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -259,8 +259,24 @@
         android:layout_width="110dp"
         android:layout_height="44dp"
         android:scaleType="fitCenter"
-        android:background="@drawable/lowoff"
-        android:src="@drawable/lowoff" />
+        android:background="@drawable/lowoff" />
 
+    <ImageButton
+        android:id="@+id/bton"
+        android:layout_marginLeft="72dp"
+        android:layout_marginTop="184dp"
+        android:layout_width="110dp"
+        android:layout_height="44dp"
+        android:scaleType="fitCenter"
+        android:background="@drawable/onoff" />
+
+    <ImageButton
+        android:id="@+id/btoff"
+        android:layout_marginLeft="72dp"
+        android:layout_marginTop="238dp"
+        android:layout_width="110dp"
+        android:layout_height="44dp"
+        android:scaleType="fitCenter"
+        android:background="@drawable/offoff" />
 
 </RelativeLayout>
