--- a/app/src/main/res/layout/activity_pass.xml
+++ b/app/src/main/res/layout/activity_pass.xml
@@ -24,25 +24,25 @@
 
     <ImageButton
         android:id="@+id/btcack"
-        android:layout_width="18dp"
+        android:layout_width="9dp"
         android:layout_height="18dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="29dp"
-        android:src="@drawable/back" />
+        android:background="@drawable/back" />
 
     <ImageView
         android:layout_width="18dp"
         android:layout_height="18dp"
         android:layout_marginLeft="195dp"
         android:layout_marginTop="29dp"
-        android:src="@drawable/signal" />
+        android:background="@drawable/signal" />
 
     <ImageButton
         android:id="@+id/btsetting"
         android:layout_width="18dp"
         android:layout_height="18dp"
         android:layout_marginTop="30dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="221dp"
         android:background="@drawable/setting"
         android:scaleType="fitXY" />
 
@@ -73,7 +73,7 @@
         android:maxLines="1"
         android:text=""
         android:textColor="#000000"
-        android:textSize="48sp" />
+        android:textSize="24sp" />
 
     <EditText
         android:id="@+id/password2"
@@ -90,7 +90,7 @@
         android:maxLines="1"
         android:text=""
         android:textColor="#000000"
-        android:textSize="48sp" />
+        android:textSize="24sp" />
 
     <EditText
         android:id="@+id/password3"
@@ -107,7 +107,7 @@
         android:maxLines="1"
         android:text=""
         android:textColor="#000000"
-        android:textSize="48sp" />
+        android:textSize="24sp" />
 
     <TextView
         android:layout_width="226dp"
