--- a/app/src/main/res/layout/activity_list_device.xml
+++ b/app/src/main/res/layout/activity_list_device.xml
@@ -3,18 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="@color/r142"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#168AD6"
+        android:background="@color/r105"
         android:orientation="horizontal"
         android:layout_weight="50">
         <ImageButton
             android:id="@+id/btReturn"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:background="#168AD6"
             android:scaleType= "fitEnd"
             android:layout_marginTop="30dp"
             android:layout_marginLeft="10dp"
@@ -23,7 +23,7 @@
         <ImageView
             android:id="@+id/imageTitle"
             android:layout_width="0dp"
-            android:layout_weight="6"
+            android:layout_weight="4"
             android:src="@drawable/type"
             android:scaleType="fitEnd"
             android:layout_marginLeft="40dp"
@@ -34,7 +34,6 @@
             android:id="@+id/btSetting"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:background="#168AD6"
             android:scaleType="fitCenter"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="10dp"
@@ -47,14 +46,17 @@
         android:layout_height="0dp"
         android:layout_weight="350"
         android:layout_marginTop="10dp"/>
+
     <Button
         android:id="@+id/btcancel"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="30"
+        android:layout_weight="36"
+        android:textSize="12sp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="50dp"
         android:textColor="@color/white"
+        android:background="@color/r105"
         android:text="Cancel" />
 </LinearLayout>
