--- a/app/src/main/res/layout/activity_pass.xml
+++ b/app/src/main/res/layout/activity_pass.xml
@@ -48,10 +48,11 @@
 
     <ProgressBar
         android:id="@+id/prgbar"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="105dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="280dp"
         android:background="@color/r100"
         android:indeterminateBehavior="repeat"
         android:indeterminateDuration="@integer/material_motion_duration_short_1" />
