--- a/app/src/main/res/layout/activity_pass.xml
+++ b/app/src/main/res/layout/activity_pass.xml
@@ -69,7 +69,7 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:gravity="center"
-        android:inputType="text"
+        android:inputType="textNoSuggestions"
         android:maxLength="1"
         android:maxLines="1"
         android:text=""
@@ -86,7 +86,7 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:gravity="center"
-        android:inputType="text"
+        android:inputType="textNoSuggestions"
         android:maxLength="1"
         android:maxLines="1"
         android:text=""
@@ -103,7 +103,7 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:gravity="center"
-        android:inputType="text"
+        android:inputType="textNoSuggestions"
         android:maxLength="1"
         android:maxLines="1"
         android:text=""
