--- a/app/src/main/res/layout/activity_pass.xml
+++ b/app/src/main/res/layout/activity_pass.xml
@@ -120,5 +120,13 @@
         android:text="Please enter the three-digit combination\nof numbers/letters displayed onth\ncooler/'s LED screen.[0~9,A~F"
         android:textSize="10sp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ok"
+        android:layout_marginTop="420dp"
+        android:layout_marginLeft="100dp"
+        android:id="@+id/btok" />
+
 
 </RelativeLayout>
