--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -23,7 +23,7 @@
         android:background="@drawable/type" />
 
     <ImageButton
-        android:id="@+id/btcack"
+        android:id="@+id/btback"
         android:layout_width="18dp"
         android:layout_height="18dp"
         android:layout_marginLeft="20dp"
