--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -14,6 +14,21 @@
         android:layout_marginTop="0dp"
         android:background="@color/r105" />
 
+    <ImageButton
+        android:id="@+id/btback"
+        android:layout_width="9dp"
+        android:layout_height="18dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="29dp"
+        android:background="@drawable/back" />
+
+    <ImageView
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_marginLeft="195dp"
+        android:layout_marginTop="29dp"
+        android:background="@drawable/signal" />
+
     <ImageView
         android:layout_width="112dp"
         android:layout_height="18dp"
@@ -22,13 +37,6 @@
         android:scaleType="fitXY"
         android:background="@drawable/type" />
 
-    <ImageButton
-        android:id="@+id/btback"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="29dp"
-        android:src="@drawable/back" />
 
     <ImageView
         android:layout_width="18dp"
@@ -37,14 +45,6 @@
         android:layout_marginTop="29dp"
         android:src="@drawable/signal" />
 
-    <ImageButton
-        android:id="@+id/btsetting"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="30dp"
-        android:scaleType="fitXY"
-        android:background="@drawable/setting" />
 
     <ImageView
         android:layout_width="220dp"
