设计密码框

--- a/app/src/main/res/layout/activity_list_device.xml
+++ b/app/src/main/res/layout/activity_list_device.xml
@@ -11,15 +11,15 @@
         android:background="@color/r105"
         android:orientation="horizontal"
         android:layout_weight="50">
+
         <ImageButton
-            android:id="@+id/btReturn"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:scaleType= "fitEnd"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_height="match_parent"/>
+            android:id="@+id/btcack"
+            android:layout_width="9dp"
+            android:layout_height="18dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="29dp"
+            android:background="@drawable/back" />
+
         <ImageView
             android:id="@+id/imageTitle"
             android:layout_width="0dp"
