--- a/app/src/main/res/layout/activity_list_device.xml
+++ b/app/src/main/res/layout/activity_list_device.xml
@@ -13,7 +13,7 @@
         android:layout_weight="50">
 
         <ImageButton
-            android:id="@+id/btcack"
+            android:id="@+id/btback"
             android:layout_width="9dp"
             android:layout_height="18dp"
             android:layout_marginLeft="20dp"
