--- a/app/src/main/res/layout/activity_capture.xml
+++ b/app/src/main/res/layout/activity_capture.xml
@@ -6,48 +6,37 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <LinearLayout
+    <View
         android:layout_width="match_parent"
         android:layout_height="52dp"
-        android:background="@color/r105"
-        android:orientation="horizontal">
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        android:background="@color/r105" />
 
-        <ImageButton
-            android:id="@+id/btback"
-            android:layout_width="9dp"
-            android:layout_height="18dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="29dp"
-            android:background="@drawable/back" />
+    <TextView
+        android:layout_width="112dp"
+        android:layout_height="18dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginTop="30dp"
+        android:text="Scan Device QR"
+        android:textColor="@color/white"
+        android:scaleType="fitXY" />
 
-        <ImageView
-            android:id="@+id/imageTitle"
-            android:layout_width="0dp"
-            android:layout_weight="4"
-            android:src="@drawable/type"
-            android:scaleType="fitEnd"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginBottom="10dp"
-            android:layout_height="match_parent" />
+    <ImageButton
+        android:id="@+id/btback"
+        android:layout_width="9dp"
+        android:layout_height="18dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="29dp"
+        android:background="@drawable/back" />
 
-        <ImageButton
-            android:id="@+id/btSetting"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:scaleType="fitCenter"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_height="match_parent" />
-    </LinearLayout>
 
     <com.journeyapps.barcodescanner.DecoratedBarcodeView
         android:id="@+id/dbv_custom"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_marginTop="52dp"
         android:layout_marginLeft="5dp"
+        android:layout_marginTop="52dp"
         android:layout_marginRight="5dp"
         android:layout_marginBottom="10dp"
         app:zxing_preview_scaling_strategy="fitXY" />
